fixed first round of TODO insertions; only more complex stuff left

--- a/chap1.tex
+++ b/chap1.tex
@@ -46,8 +46,6 @@
 
 %%=====================================
 
-%%TODO: Personal exceptionalism: ``we think we're good drivers''
-
 
 The popular narratives about self-driving vehicles have not appeared
 out of nowhere. But what are their roots? What are the sources from which
@@ -517,11 +515,20 @@ relations.\cite[p. 188--200]{nyeAmericas} The actual historical
 circumstances are, in this case, less important than the general
 perception that automated 
 systems, such as the robotic arms used for painting and assembly, are
-reducing the overall pool of available jobs.
+reducing the overall pool of available jobs.\footnote{As an example of
+  this contrary history, a report by KPMG produced for the Society of Motor
+Manufacturers and Traders suggests that automated vehicles could be
+expected to create 320,000 new jobs in the United Kingdom by 2030, only 25,000 of
+which would be in automotive manufacturing directly
+\cite{???-http://www.telegraph.co.uk/finance/newsbysector/industry/engineering/11495706/Driverless-cars-to-create-320000-UK-jobs-and-save-2500-lives.html}.
+That automated vehicles can be seen to create jobs, rather than
+eliminate them, has everything to do with the labor involved in their
+development, production, testing, and use. This is not only
+factory labor.}
 
-%%TODO: Article about expected impacts in UK, includes lots of jobs and
+%%TODO (DONE): Article about expected impacts in UK, includes lots of jobs and
 %%predictions by 2030:
-%%http://www.telegraph.co.uk/finance/newsbysector/industry/engineering/11495706/Driverless-cars-to-create-320000-UK-jobs-and-save-2500-lives.html
+%%
 %footnote it
 
 Modern automotive manufacturing is not alone in presenting conflicting ideas
@@ -817,12 +824,24 @@ of AI as conveyed through news coverage about self-driving vehicles is
 not a complete one, but it is one side of the truth. And even
 engineers ignorant of this history may make similar mistakes of understanding.
 
+%%TODO (DONE} Cite the automaton in the western imagination! Kang
+
 Intelligent machines are not a new idea. Just as automation has long
 been a part of human history, dreams of artificial life suffuse our
-legends. The myths about Hephaestus and
+legends---though as Minsoo Kang
+rightly notes, these early automata are of diverse types and kinds,
+and some are readable as automata only in hindsight, due to their
+similarities with contemporary robots \cite[p. 15]{???-kang}.
+Nonetheless, that we continue 
+to retell these stories in this way should tell us something about the
+lure of the automated, its power as a ``hybrid entity'' that can
+mediate between living and nonliving worlds \cite[p. 19]{???-kang}.
+The myths about Hephaestus and 
 his creations, notably Talos, a golden female automaton, come to us
-from antiquity,\cite[Ch. 1]{mccorduck}  but continue to be cited as historical antecedents in
-literature on autonomous robots and their ethical issues.\cite[p. 3]{patricklin} Automata,
+from antiquity,\cite[Ch. 1]{mccorduck}  but continue to be cited as
+historical antecedents in 
+literature on autonomous robots and their ethical issues.\cite[p.
+  3]{patricklin} Automata, 
 or rather semblances of automata, appear in Hellenic Egypt, with
 priests as puppeteers pulling their strings.\cite[Ch. 1]{mccorduck} The history of
 artificial life is intertwined with that of autonomous machines: the
@@ -833,7 +852,8 @@ artificial life is inspired and physically mobilized by static
 electricity, the infusing of a ``spark of being'' into the creature; and
 electrostatics were a highly public research topic and indeed public
 spectacle, complete with live demonstrations, in the 1700s and early
-1800s).\cite[p. 44]{shelley} Judah Loew ben Bezalel, a Talmudic scholar, is in legend the
+1800s).\cite[p. 44]{shelley} Judah Loew ben Bezalel, a Talmudic
+scholar, is in legend the 
 creator of the golem, a being animated from clay who functioned as a
 spy against the Gentiles.\cite[Ch. 1]{mccorduck} Though Loew's was not the only golem
 recorded in myth, the rabbi occupies a special position among the most
@@ -841,7 +861,8 @@ prominent AI researchers of the 20th century: Pamela McCorduck records
 that Marvin Minsky and Joel Moses grew up with a ``family tradition
 that they are descendants of Rabbi Loew,'' and Joel Moses claims a number of
 other American scientists, including John von Neumann and Norbert
-Wiener, also consider themselves among the descendants.\cite[Ch. 1]{mccorduck} This is all
+Wiener, also consider themselves among the descendants.\cite[Ch.
+  1]{mccorduck} This is all 
 to say that while the technological drivers of conceptual visions are
 more contemporary, ancient myth and legend continue to subtly underpin
 research in autonomy and artificial intelligence.
