--- a/chap3.tex
+++ b/chap3.tex
@@ -23,7 +23,7 @@
 %--interface first approach of Google, w/ similicity, presupposes a
 %certain kind of operation
 
-%%TODO: p 110: high performance racing pushing things? put in a little bit
+%%TODO (DONE): p 110: high performance racing pushing things? put in a little bit
 %%about F1 etc in the conclusion
 
 
@@ -515,8 +515,7 @@ in a crisis situation, and task hand-over is likely to be
 catastrophic.\cite{???} A transportation systems researcher I spoke to
 even cited this as the key reason he felt that highway-only
 self-driving systems would not work, and that companies would have to
-design for full automation everywhere.\footnote{How much do I say,
-  safely?} 
+design for full automation everywhere.
 
 \subsection{Aircraft Automation}
 
@@ -1067,9 +1066,9 @@ boundaries.\footnote{This is probably because the issues are
   human-factors engineering may be part of this.} Supervisory control and 
 joint-cognitive systems approaches are actually in use all over
 industry, even in cases where they are not necessarily cast in
-those terms. 
+those terms: from thermostats and elevators to existing autopilot systems.
 
-%%TODO <??? Describe some from Sheridan 10-11 or run paragraphs together>
+%%TODO2 <??? Describe more from Sheridan 10-11 or run paragraphs together>
 
  While it is also
 implicit in much popular writing about autonomous systems, however,
@@ -1081,7 +1080,8 @@ is too often brought in at the last minute to design an interface for
 an already specified device,\footnote{This subtlety of the politics
   within engineering communities themselves was not something I was
   previously aware of, but was made clear to me by David Mindell.
-  Discussion with the author, September 8, 2014.} rather than actually being involved in
+  Discussion with the author, September 8, 2014.} rather than actually
+being involved in 
 device design from the beginning, as effective supervisory control
 requires. While the related discipline of interaction design or
 user-experience design is gaining in importance in the information
@@ -1089,7 +1089,8 @@ technology sector\footnote{This I can speak to personally, through my
   involvement with programming communities building web and mobile
   applications. Demand for UI/UX designers has increased dramatically,
 following the success of design-first product development by IT
-companies, most notably Apple.}, this too is often (though not always) a surface-level
+companies, most notably Apple.}, this too is often (though not always)
+a surface-level 
 consideration of the interface, without consideration of deeper
 dynamics of human and joint cognitive processes. It may be
 that this kind of engineering work gains greater recognition with the
@@ -1157,8 +1158,7 @@ come to be more socially acceptable in certain ways---notably, in
 terms of autonomy and ethics. Furthermore, as I have stated
 repeatedly, complete autonomy is fundamentally a chimera.
 
-%%TODO add this paragraph
-%% http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/
+%%TODO (DONE) add this paragraph
 %% ``Urmson said Google believes that while technology that assists drivers
 %% can help reduce some accidents, only completely self-driving cars will
 %% fully address safety concerns. One reason, he said, is that the better
@@ -1172,6 +1172,21 @@ repeatedly, complete autonomy is fundamentally a chimera.
 %% --> he is right that driver assistance tech won't just become
 %% driverless, but wrongly assumes driverless is the only reasonable end goal.
 
+Narratives that base themselves on firm distinctions between
+``levels'' of automation are partially to blame here. Google's Chris
+Urmson wants to separate incremental or assistive 
+approaches from ``completely'' self-driving cars, in part, perhaps to
+hype Google's current work. Google's claim is that only complete
+vehicle automation can entirely address road safety issues, citing
+increases in risk-taking behavior likely to accrue in safer systems.
+But Urmson goes further to say that the incremental approach will
+never achieve the necessary full automation: ``That’s like me saying
+if I work really hard at jumping, one day I will be able to fly''
+\cite{???-http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/}.
+But while layers of assistive technologies cannot be expected to simply become
+driverless without high level control and coordination, this perspective wrongly
+assumes that driverless vehicles, ``completely'' automated, are the
+only reasonable end goal. 
 
 %% 3) situate the moonshot approach (which may actually be easier in some
 %% senses but less socially acceptable) and the mixed approach in a way
@@ -1181,7 +1196,9 @@ repeatedly, complete autonomy is fundamentally a chimera.
 %% partially autonomous (4 p)
 
 %%Defense Science board report (DSB)
-NASA, and the Defense Science Board in their report \emph{The Role of
+These levels formulations, and their assumptions, are not without
+broader criticism. NASA, and the Defense Science Board in their report
+\emph{The Role of 
 Autonomy in DoD Systems}, describe the proliferation of attempts at
 automation taxonomies as developing out of Sheridan's work, the very
 book cited above as the bible for human supervisory control.\cite{???}
@@ -1240,6 +1257,11 @@ narrative of the driverless vehicle, the dashboard is vestigial, but
 it could be a vibrant space presenting unparalleled new possibilities
 for human-machine interaction.
 
+%%TODO (DONE) insert below And panic issues: find the official report, but
+%%connect ethics and emergency
+%%response; scaffolding a system that helps people is key
+%http://m.nautil.us/issue/23/dominoes/fear-in-the-cockpit
+
 Attention, and how to preserve, regulate, monitor, and transact it,
 must be at the center of vehicle development.\footnote{I must add here
 that attention alone is also not na\"{\i}vely a good thing:
@@ -1271,7 +1293,12 @@ the latter means that long periods of time might go by without human
 monitoring (perhaps minutes or even hours, depending on system
 design), the former merely requires an operator to be able to be 
 distracted on the order of 10 seconds without causing a crash. These
-are, at their core, very different engineering situations. In
+are, at their core, very different engineering situations. And though
+people do panic in crisis situations such as the TransAsia Airways
+Flight 235 crash in which panicked pilots throttled back the wrong
+engine \cite{???-http://m.nautil.us/issue/23/dominoes/fear-in-the-cockpit}, it may be more appropriate and more useful to consider systems
+that scaffold and support human capacity and attention, rather than
+attempting to eliminate it altogether. In
 all this, we should avoid the clich\'{e}d question ``People: sinners
 or saints?'' which seems so popular in media discussions: it represents
 a ``false position'' that does not adequately reflect the complex
