--- a/concl.tex
+++ b/concl.tex
@@ -114,9 +114,7 @@ force, which provided auto companies and their supporters the impetus
 to shift public standards in a particular direction, and to shape the
 street to their own advantage.\footnote{Cars were not, however, the
   only technological device responsible for 
-the beginning of the street as we know it.
-Automobiles were not fundamentally a prerequisite for the creation of the paved
-roads that later helped them flourish. Instead, the bicycle marks the
+the beginning of the street as we know it. Instead, the bicycle marks the
 beginning of the ``good roads'' movement, and the push for ubiquitous
 road
 paving\cite{???-http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history}.
@@ -125,10 +123,7 @@ asphalt manufacturers and other special interests who saw money to be made---cre
 very roads that bicycles then had to compete with cars for space on
 \cite{???-vox2}. Many of the primary riders who had succeeded in lobbying for
 the 1916 Federal Aid Road Act, however, switched over to pioneer the
-automobile as its popularity rose in the early 20th century. Between
-the technologies of bicycle and automobile, the American roadway
-underwent a period of radical change that crystallized the system into
-something relatively close to its current form.} 
+automobile as its popularity rose in the early 20th century.} 
 
 This historical
 example provides some insight into the process by which new
@@ -203,7 +198,7 @@ is already here. Fully comprehending this is a critical task for the
 maintenance of cogent, productive public conversations---and
 policymaking---about automated vehicles.}
 
-%%TODO insert cyborg ref briefly
+%%TODO (DONE) insert cyborg ref briefly
 %While they may permeate Hollywood movies, most people would probably
 %say that they are not yet here. 
 
@@ -414,10 +409,18 @@ vehicle operations. At the most radical, and most teleological, we are
 facing not a system of autonomous robots but fleets of telerobotic
 vehicles with closed-loop control systems providing limited autonomy,
 that are supervised by remote operators within the datacenters of
-multinational IT corporations. 
+multinational IT corporations.\footnote{I have encountered few
+  companies who seem to be honest about this supervisory arrangement,
+  but the founder and CEO of the mini-cab app company Kabbee envisions
+just such a thing: ``There’s no reason why a taxi driver couldn't have
+something like three screens in front of him . . . and sit in a studio
+directing three or four or five cars through the roads of London where
+they are driverless cars with a human controlling the GPS''
+\cite{???-http://www.forbes.com/sites/freddiedawson/2015/03/31/how-far-away-is-driverless-technology-really/}.
+Whether the appropriate number is 5 or 5000 cars, this vision seems
+plausible, and bears similarities to current Predator UAV operations.}
 
-%%TODO: 
-%%http://www.forbes.com/sites/freddiedawson/2015/03/31/how-far-away-is-driverless-technology-really/
+%%TODO (DONE): 
 %%Kabbee gets the supervised idea!
 
 But even this, though it presents certain advantages, is by no means
@@ -446,7 +449,15 @@ find it socially unacceptable to surrender certain areas of operation
 completely to computers. The method and timescale of automated
 operation may greatly impact 
 public acceptance, to the point that certain types of human
-involvement may be required to produce marketable technologies. Though
+involvement may be required to produce marketable
+technologies.\footnote{Other barriers to public acceptance that are
+  amenable to alternative operational modes include travel sickness. A
+  recent University of Michigan study suggests car sickness could be a
+  problem for automated vehicle systems, as well as significantly reducing their
+  convenience factor
+  \cite{???-http://www.telegraph.co.uk/finance/newsbysector/industry/engineering/11523167/Why-travel-sickness-could-put-the-brakes-on-driverless-cars.html}.
+  Certain levels of human involvement would reduce the perceived productivity
+  gains of automated systems, but could ameliorate travel sickness issues.} Though
 this may be distasteful to some technologists invested in furthering
 technological solutions to social problems, it is not fundamentally
 a failure. It is a societal choice to which engineering solutions
