--- a/intro.tex
+++ b/intro.tex
@@ -372,18 +372,32 @@ technology largely worked, with the PROMETHEUS project coming to a
 successful conclusion in 1994 and 1995 with 1000 kilometers of largely
 autonomous operation in normal traffic conditions on Paris motorways,
 as well as a finale drive from Munich to Copenhagen\cite{???}.
+Meanwhile, vision-based research also occurred actively in the United States;
+Congress passed the Intermodal 
+Surface Transportation Efficiency Act in 1991, which allowed for \$650 million
+in funding for driverless vehicle research over the following six
+years
+\cite{???-http://www.smithsonianmag.com/history/the-national-automated-highway-system-that-almost-was-63027245/}.\footnote{Novak
+of the \emph{Smithsonian} blog suggests that the biggest problem with
+the legislation was that it failed to define what a ``fully automated
+highway system'' would be, such that it could be achieved in the time
+allotted \cite{???-same}. This is an important consideration for
+future work.} The act spurred a consortium of nine organizations to
+work on meeting the 1997 deadline for demonstrations.
+Notably, a Congressional report described the goal as ``hands-off,
+feet-off'' driving \cite{???-same}, language which returns in the NHTSA's recent
+\emph{Preliminary Statement of Policy Concerning Automated Vehicles}
+and proves similarly unhelpful, as will be described in chapter
+\ref{chap:1}.
 
-Brief section about this project
-http://www.smithsonianmag.com/history/the-national-automated-highway-system-that-almost-was-63027245/
-note the prevalence of ``'hands-off, feet-off''' language, which
-returns in NHTSA report in \ref{chap:1}
-and specifically
-Novak claims ``perhaps the biggest problem was that the legislation
-never clearly defined what was meant by 'fully automated highway
-system.''', an important consideration for future work
-
-
-
+%TODO(DONE) expand
+%% Brief section about this project
+%% note the prevalence of ``'hands-off, feet-off''' language, which
+%% returns in NHTSA report in \ref{chap:1}
+%% and specifically
+%% Novak claims ``perhaps the biggest problem was that the legislation
+%% never clearly defined what was meant by 'fully automated highway
+%% system.''', an important consideration for future work
 
 Further autonomous vehicle research has progressed incrementally from
 these vision-based beginnings. Significant interest was spurred by the
@@ -516,19 +530,27 @@ control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
 alone---but is implied in these kinds of statements. 
 
-???-To be written
-Tesla and forthcoming ``autopilot'' mode, which explicitly involved aircraft
-discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
-http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?\_r=0\&referrer=
+%%TODO (DONE)
+%% ???-To be written
+%% Tesla and forthcoming ``autopilot'' mode, which explicitly involved aircraft
+%% discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
 
-Elon Musk expects
+Elon Musk's electric car company, Tesla Motors, is working on an
+``autopilot'' mode for their cars, intended to be released publicly by
+the summer of 2015, 
+which explicitly invokes both existing aircraft automation---or at
+least popular ideas about it---and Chrysler's early ``Auto Pilot''
+cruise-control system, from the late 1950s
+\cite{???-http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?\_r=0\&referrer=}.
+Though Tesla is clear that human involvement and judgment will be
+required at first, Musk expects
 that once sufficiently capable vehicles 
 come to market, human drivers may be
 outlawed.\cite{???-http://www.forbes.com/sites/leoking/2015/03/19/googles-gargantuan-push-for-cars-with-no-steering-wheel-by-2020/}.
-In this vision, the technology is ready, and law and policy need to
+In this vision, the technology is ready, or almost ready, and law and policy need to
 adapt. ``Robots can already outdrive humans,'' this view says, ``now
 everyone needs to get out of the way''
-\cite{???-http://www.popsci.com/cars/article/2013-09/google-self-driving-car}. 
+\cite{???-http://www.popsci.com/cars/article/2013-09/google-self-driving-car}.
 
 %% 2) deal in general with some of the popular portrayals of the
 %% technology:  (4 p)
@@ -587,7 +609,7 @@ historical examples.
 %CMS801 final paper! 
 %3) and shift to the lead-in to the main thesis sections: 
 
-%%TODO consider: ; or even to some extent ontological position of a
+%%TODO (DONE) consider: ; or even to some extent ontological position of a
 %%self-driving car that ``knows'' nothing 
 
 However, the nature of the self-driving car as it will appear in
@@ -610,7 +632,7 @@ different social and cultural impacts.
 %% 5) Where do we go from here? What understandings need to change to
 %% make the broader picture comprehensible?
 
-%TODO alter the end of this if the conclusion becomes two chapters
+%TODO (DONE) alter the end of this if the conclusion becomes two chapters
 \section{Overview}
 
 This thesis is organized around several key questions. First, what are
@@ -645,9 +667,7 @@ different stakes and trade-offs. Finally, where can we go, as a
 culture, from this realization? What understandings need to change to
 make this picture more broadly comprehensible? And what should it mean
 for policy? While this is a broad topic, itself worthy of a thesis, I
-argue in the conclusion\footnote{For more about hybridity and cyborgs,
-and about the ways the street has previously been re-shaped by vehicle
-technologies, see the appendix.} that the contrasts
+argue in the conclusion that the contrasts
 between the rhetorics of artificial intelligence and supervisory
 control, which really describe many of the same artifacts, point the
 way. A broader appreciation for our hybrid lives, our hybrid
