a bunch of little citation changes, a few new cites added

--- a/chap2.tex
+++ b/chap2.tex
@@ -205,9 +205,10 @@ these databases can capture the movements of large segments of the
 population, and therefore include potentially sensitive information
 about people's movements. Despite this, their collection and use
 remains largely unregulated.\footnote{Groups such as the EFF and ACLU
-  are attempting to do something about this \cite{kayyaliEFF}.} California police are coming under
+  are attempting to do something about this \cite{kayyaliEFF}.}
+California police are coming under 
 criticism from civil rights groups about their mass collection of
-vehicle position information through police license plate cameras.\cite{???}
+vehicle position information through police license plate cameras.\cite{maassCivil}
 Clearly, these types of contested data collection are already
 possible. But networked vehicles, with their arrays of sensors,
 provide more avenues of data collection, and therefore stand to
@@ -443,7 +444,7 @@ Mountain View, California may be mapped early, rural West Virginia or
 Northern Maine may not be mapped as soon or as
 frequently.\footnote{And it is worth noting that 60 percent of road
   fatalities occur on rural roads, and that the rate of fatalities per
-mile is twice that as for urban roads\cite[p. 11]{broviakCars}}
+mile is twice that as for urban roads \cite[p. 11]{broviakCars}.}
 Inequalities may be increased if routes frequented by upper-middle
 class professional commuters, most likely to own new autonomous cars,
 are mapped first, while roads around low-income communities are
@@ -490,7 +491,7 @@ particularly easy for human beings, but particularly difficult for
 machines. The invention of the photocell, early a tool for workplace
 monitoring and surveillance, provided a simple channel through which
 electrical systems could respond to the amount of light reaching
-them\cite[p. 44]{faxed} \cite[p. 361]{nyeElectrifying}. Though the photocell can easily
+them \cite[p. 44]{faxed} \cite[p. 361]{nyeElectrifying}. Though the photocell can easily
 provide a computer system 
 with access to brightness information over time, perceiving detail and
 depth, identifying shapes, and interpreting expression and motion are
@@ -601,9 +602,9 @@ solves some of the difficulties of image interpretation by default, as
 it can provide highly-sensitive information about free space and
 obstacles. Shape-detection algorithms can then be used (in addition to
 vision-based data) to classify obstacles as different types of
-objects: pedestrians, bicyclists, cars, and trucks\footnote{This also
+objects: pedestrians, bicyclists, cars, and trucks.\footnote{This also
   works for other kinds of physical objects. See for example the
-  detection work done by \cite{fukuda}}.
+  detection work done by \cite{fukuda}.}
 
 %% DONE?
 %% --Göde Both and reluctance to use Machine Learning (1 p)
@@ -1208,7 +1209,7 @@ the NRC panel is concerned about validation of existing aeronautical
 control systems, automated vehicles may contain 10 times as much code
 as modern, highly-computerized aircraft (100 million lines versus 5 to
 10 million for the F-35 Joint Strike Fighter)
-\cite{http://mobile.reuters.com/article/idUSKBN0MN1E820150327?irpc=932}.
+\cite{reutersF35}.
 The NRC panel is not alone in recognizing these 
 issues: the Defense Science Board in their task force report \emph{The
   Role of Autonomy in DoD Systems} attempts to address the importance
@@ -1263,7 +1264,7 @@ value.\footnote{By comparison, the CAST website describes: ``The
   enhancements made over the past decade have made history in
   commercial aviation - by making it the safest it has ever been.
   Today, fatal accidents are reduced to only one in 22.8 million
-  flights, an absolutely remarkable achievement.''\cite{cast-safety.org}} Though
+  flights, an absolutely remarkable achievement'' \cite{cast-safety.org}.} Though
 aircraft would be as safe as they 
 had ever been, people, on seeing the sheer number and scale of
 accidents, would be unlikely to choose to fly. While the issues facing
@@ -1301,7 +1302,7 @@ the US push for automated highways, that ``Even more astonishing [than
   the level of spending] is
 the total lack of organized opposition to the idea, despite evidence
 that smart cars and highways may well exacerbate the very problems
-they are supposed to solve''\cite{???-novakNationalAutomated}.}
+they are supposed to solve'' \cite{novakNationalAutomated}.}
 
 In my discussions with a fellow researcher who has been studying the
 development of self-driving vehicles, it became clear that the
@@ -1310,7 +1311,7 @@ society.\footnote{This self-image is not limited to those working on
   mobility systems. John Naughton writes---and my contact with
   programmers would lead me to agree---that many ``are fired with a zealous
   conviction that they are doing great stuff for the
-  world.''\cite{naughtonTech}}
+  world'' \cite{naughtonTech}.}
 They
 tend to buy into utopian visions of big cities freed of cars, with no
 parked cars on the streets and only driverless cabs. This desire to
@@ -1323,7 +1324,7 @@ streets \cite[p. 10]{burdenCities} \cite[p. 65]{fernandezBoulder}, and generally
 pedestrians and bicyclists. Many of the streets in the most pedestrian
 friendly zones of older cities would no longer be legal to build under
 current traffic codes, and the default lane widths for arteries have increased
-from 10 to 12 feet over the past fifty years, with disastrous results.\cite{???-http://www.citylab.com/design/2014/10/why-12-foot-traffic-lanes-are-disastrous-for-safety-and-must-be-replaced-now/381117/} In some of the
+from 10 to 12 feet over the past fifty years, with disastrous results.\cite{citylab} In some of the
 United States's most pedestrian-unfriendly cities, major intersections
 in the downtown area are more than 9 lanes across, each of which is 12
 feet wide. These changes in 
@@ -1369,7 +1370,7 @@ architecture of the overall transportation system.\footnote{As Adams
 out cities in the United States, and it is now doing the same in
 cities all over the developing world as their inhabitants rush to
 embrace industrialization and its mistakes'' \cite[p.
-  227]{adamsBrewerRoadways}} And therefore it is
+  227]{adamsBrewerRoadways}.} And therefore it is
 the transportation system, not automated vehicles alone, that must be remodeled.
 
 Fleets of fully automated vehicles could reasonably be expected to increase
@@ -1400,7 +1401,7 @@ experiments, or even trial and error to get right. Old models and
 habits need to be broken---consider for example the rules (about road
 widths, for instance) enshrined in law and the AASHTO ``Green Book'', as well as their
 surrounding culture, rules which are often taken almost as natural
-law\cite[p. 181, 183]{swopeTrenton}---and new ones built to replace them. 
+law \cite[p. 181, 183]{swopeTrenton}---and new ones built to replace them. 
 
 However, we should be aware that these visions, however contingent,
 are not universal. Looking more closely, my informant described to me, the visions
