--- a/main.bib
+++ b/main.bib
@@ -699,6 +699,24 @@
    note = "https://www.eff.org/deeplinks/2014/02/eff-submits-letter-opposing-oaklands-domain-awareness-center",
 }
 
+@ARTICLE{maassCivil,
+   author = "Dave Maass",
+   title = "{C}ivil {L}iberties {G}roups {A}ppeal {R}uling {O}ver {A}utomatic {L}icense {P}late {R}eader {D}ata",
+   journal = "Electronic Frontier Foundation",
+   year = 2014,
+   month = "October 15",
+   note = "https://www.eff.org/deeplinks/2014/10/civil-liberties-groups-appeal-ruling-over-automatic-license-plate-reader-data",
+}
+
+@ARTICLE{toveyCreate,
+   author = "Alan Tovey",
+   title = "{D}riverless cars to create 320,000 {UK} jobs and save 2,500 live",
+   journal = "The Telegraph",
+   year = 2015,
+   month = "March 26",
+   note = "http://www.telegraph.co.uk/finance/newsbysector/industry/engineering/11495706/Driverless-cars-to-create-320000-UK-jobs-and-save-2500-lives.htm",
+}
+
 @ARTICLE{zetter,
    author = "Kim Zetter",
    title = "{H}ackers {C}an {M}ess {W}ith {T}raffic {L}ights to {J}am {R}oads and {R}eroute {C}ars",
@@ -1138,7 +1156,93 @@
    pages = "49--56",
 }
 
+@BOOK{kang,
+   author = "Minsoo Kang",
+   title = "{S}ublime {D}reams of {L}iving {M}achines: {T}he {A}utomaton {I}n the {E}uropean {I}magination",
+   publisher = "Harvard University Press",
+   address = "Cambridge, MA",
+   year = "2011",
+}
 
+@ARTICLE{novakNationalAutomated,
+   author = "Matt Novak",
+   title = "{T}he {N}ational {A}utomated {H}ighway {S}ystem {T}hat {A}lmost {W}as",
+   journal = "Smithsonian",
+   month = "May 16",
+   year = 2013,
+   note = "http://www.smithsonianmag.com/history/the-national-automated-highway-system-that-almost-was-63027245/?no-ist",
+}
+
+@ARTICLE{citylab,
+   author = "Jeff Speck",
+   title = "{W}hy 12-{F}oot {T}raffic {L}anes {A}re {D}isastrous for {S}afety and {M}ust {B}e {R}eplaced {N}ow",
+   journal = "The Atlantic, CityLab",
+   month = "October 6",
+   year = 2014,
+   note = "http://www.citylab.com/design/2014/10/why-12-foot-traffic-lanes-are-disastrous-for-safety-and-must-be-replaced-now/381117/",
+}
+
+@ARTICLE{reutersF35,
+   author = "Edward Taylor",
+   title = "{T}esting of software adds to urgency in race for driverless cars",
+   journal = "Reuters",
+   month = "March 27",
+   year = 2015,
+   note = "http://mobile.reuters.com/article/idUSKBN0MN1E820150327?irpc=932",
+}
+
+@TECHREPORT{battin,
+   author = "Richard H. Battin",
+   title = "Some Funny Things Happened On the Way to the Moon",
+   institution = "American Institute of Aeronautics and Astronautics",
+   type = "Theodore von Karman Lecture",
+   month = "January 9-12",
+   year = 1989,
+}
+
+@ARTICLE{scribdColliers,
+   author = "Artur Coelho",
+   title = "{C}ollier's {M}agazine {M}an {W}ill {C}onquer {S}pace",
+   journal = "Scribd",
+   month = January 02,
+   year = 2013,
+   note = "http://www.scribd.com/doc/118710867/Collier-s-Magazine-Man-Will-Conquer-Space; This is a collection of scans from Collier's magazine.",
+}
+
+@ARTICLE{dreamsofspace,
+   author = "Sisson, John",
+   title = "{C}ollier's {M}arch 22, 1952 '{M}an {W}ill {C}onquer {S}pace {S}oon'",
+   journal = "Dreams of Space - Books and Ephemera",
+   month = "March 22",
+   year = 2012,
+   note = "http://dreamsofspace.blogspot.com/2012/03/colliers-march-22-1952-man-will-conquer.html",
+}
+
+@BOOK{DM,
+   author = "David Mindell",
+   title = "{D}igital {A}pollo: {H}uman and {M}achine in {S}paceflight",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2011",
+}
+
+@TECHREPORT{hypersonics,
+   author = "Dennis R. Jenkins",
+   title = "{H}ypersonics {B}efore the {S}huttle: {A} {C}oncise {H}istory of the {X}-15 {R}esearch {A}irplane",
+   institution = "NASA",
+   type = "Monographs in Aerospace History",
+   number = "SP-2000-4518",
+   month = "June",
+   year = 2000,
+}
+
+@BOOK{kauffman,
+   author = "James L. Kauffman",
+   title = "{S}elling {O}uter {S}pace: {K}ennedy, the {M}edia, and {F}unding for {P}roject {A}pollo, 1961-1963",
+   publisher = "University of Alabama Press",
+   address = "Tuscaloosa, AL",
+   year = "1994",
+}
 
 
 
