--- a/chap3.tex
+++ b/chap3.tex
@@ -87,7 +87,7 @@ And these are all senses with which the narrative of automation in
 spaceflight is inflected today. Certainly unmanned spaceflight had a
 strong interest in automation since at least the 1950s, with serious
 research being done on simple automated probes to do a fly-by of
-Mars.\cite{???-DMsclass} But the story of automation in spaceflight is
+Mars \cite[p. 1]{battin}. But the story of automation in spaceflight is
 not nearly so simple as it appears. Rather than being the ultimate and
 obvious endpoint of a progression of human engineering in space, the
 roles and implementations of automation remained fraught, highly
@@ -102,7 +102,7 @@ technologies.
 
 From 1952 to 1954, \emph{Colliers} magazine published a series of articles
 titled \emph{Man Will Conquer Space Soon} which described Wernher Von
-Braun's vision for manned spaceflight.\cite{???-wiki} Numerous
+Braun's vision for manned spaceflight \cite{scribdCollier} \cite{dreamsofspace}. Numerous
 articles focused, not surprisingly, on the people who would do the
 voyaging, how they would be selected, tested, and kept alive. But
 lurking behind this majestic picture of manned spaceflight was a dark
@@ -112,14 +112,14 @@ rockets. In a speech to the Society of Experimental Test Pilots in
 August of 1959, a hostile audience for this sort of rhetoric, von
 Braun emphasized that human control in rocketry is ``actually
 undesirable'' because human beings are ``outrageously slow and
-cumbersome'' in missile terms.\cite[p. 66-67]{???-DM} While von Braun
+cumbersome'' in missile terms.\cite[p. 66-67]{DM} While von Braun
 may have been the most polemical, he was not alone in his cautions to
 test pilots about the limits of their capacities.
 In an earlier speech to the SETP (October 4, 1957) on automation and
 the ``survival'' of the test pilot as a profession, Richard Horner
 took a balanced and moderate view on human involvement, but warned
 that technology would progress faster than human beings change:
-the ``link'' that improves the least ``is the man himself''\cite[p. 19]{???-DM}>
+the ``link'' that improves the least ``is the man himself''\cite[p. 19]{DM}>
 
 Pilots---prospective astronauts---were not about to find themselves
 cut out of the control loop, and for good reasons. Not only was their
@@ -132,16 +132,16 @@ the pilot firmly in command\footnote{Kelly Johnson, the leading aircraft
 designer in the US, working at Lockheed, objected to the manned
 component of the X-15
 project, but his objections were overruled by the NACA.\cite[p.
-  46]{???-DM}} through fly-by-wire controls\cite{???}---they had 
+  46]{DM}} through fly-by-wire controls \cite[p. 55, 61--62, 77]{hypersonics}---they had 
 every reason to doubt the capabilities of computerized guidance and
 control systems.\footnote{Even the fly-by-wire control was somewhat
   controversial. Milt Thompson, a test pilot in the X-15 program, said
   of it: ``you would like him [the engineer responsible] to be in the
 airplane with you to be exposed to any adverse results.''\cite[p.
-  55]{???-DM}} Al Blackburn's response to Von Braun's speech to the
+  55]{DM}} Al Blackburn's response to Von Braun's speech to the
 SETP was particularly empassioned, and recounted his many experiences with
 ``brain-dead autopilots, broken fire control systems, and failed cockpit
-computers''\cite[p. 68]{???-DM} From
+computers''\cite[p. 68]{DM} From
 his admittedly partial perspective, the resourcefulness of human
 pilots is the answer to automated technology's lack of reliability.
 
@@ -153,7 +153,7 @@ Braun's ``missile riders,'' but only just. While Mercury preserved an
 aeronautical joystick, which controlled the reaction control thrusters
 (RCS) and thereby allowed the astronauts attitude control over their
 space ``capsule''---nomenclature that would soon find itself under
-siege\cite{???-DMsclass}---they could not fly the Mercury craft in any
+siege\cite[p. 85]{kauffman}---they could not fly the Mercury craft in any
 aeronautical sense. Like the warheads of the ballistic missiles from
 which the program spawned---and which were in fact used to convey the
 Mercury astronauts into space---the astronauts were launched by
@@ -191,7 +191,7 @@ more automated than their Western counterparts---Gargarin could not
 operate manual backup functionality without unlocking a combination
 lock, the
 code to which was only reluctantly placed in the cockpit in a sealed
-envelope rather than being radioed from the ground\cite[p. 89]{???-DM}---and
+envelope rather than being radioed from the ground\cite[p. 89]{DM}---and
 this automation was seen as a feminization of space:  Soviet
 spacecraft required no skill to operate, and were therefore,
 rhetorically at least, less impressive.\cite{???} This reading was
@@ -209,7 +209,7 @@ ultimately selected for the program.\footnote{All those selected for
   existence as a civilian agency.\cite{???-DM} Issues of secrecy alone
 should not have disqualified other military personnel, and a greater
 emphasis on science in the program would have suggested actually
-including scientists on flight teams.\cite{???-DM} Though over the recruitment
+including scientists on flight teams, as Mindell notes. Though over the recruitment
 rounds the emphasis on test-pilot status decreased in favor of greater
 engineering knowledge (and higher degrees), and though one geologist
 set foot on the moon during the final Apollo mission, the astronaut
